hphp/hack/test/typecheck/array/disallow_zero_type_parameters_for_varray.php.exp
File "disallow_zero_type_parameters_for_varray.php", line 3, characters 18-23:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "hackarray.hhi", line 52, characters 24-26:
  Definition is here
