hphp/hack/test/typecheck/array/disallow_zero_type_parameters_for_varray.php
<?hh // strict

function test(): varray {
  return varray[0, 1, 2];
}
